# efcore-pilot

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandRunner.vue  EnvironmentPanel.vue  HistoryPanel.vue  ProfilePanel.vue
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/stores/: history.ts  profiles.ts
src/types/: command.ts  discovery.ts  profile.ts
src/utils/: dialog.ts
