[package]
name = "efcore-pilot"
version = "0.1.0"
description = "Cross-platform EF Core migration manager"
authors = ["EfCorePilot Team"]
edition = "2021"

[lib]
name = "efcore_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
